03-argocd-apps/manifests/mlflow-ads-anomaly-dest-country-port/mlflow-app-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-ads-anomaly-dest-country-port-app-ing
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP  
    kubernetes.io/ingress.class: "nginx"    
    nginx.ingress.kubernetes.io/proxy-http-version: "1.0"   
spec:
  rules:
    - host: mlflow-ads-anomaly-dest-country-port.rtarf-ml.its-software-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlflow-ads-anomaly-dest-country-port
                port:
                  number: 8082
